# pike_modules-ejdb

./: .hgtags  CHANGES  Makefile.in  README  TODO  configure.in  ejdb.cmod  ejdb_config.h.in  testsuite.in  upload_module_version.pike
module.pmod.in/: module.pmod
module.pmod.in/support.pmod/: Binary.pike  ObjectId.pike  module.pmod
package/: postinstall.pike
pmar/SCRIPTS/: postinstall.pike
