# $Id: configure.in,v 1.2 2005-09-22 20:23:20 hww3 Exp $
AC_INIT(ejdb_config.h.in)

AC_MODULE_INIT()
AC_CONFIG_HEADERS(ejdb_config.h)

if [ `uname -x` = "Windows_XP" ] ; then
EJDB_LIBS="-ltcejdbdll"
else
EJDB_LIBS=`pkg-config --libs tcejdb`
EJDB_CFLAGS=`pkg-config --cflags tcejdb`
fi

CPPFLAGS="${CPPFLAGS} ${EJDB_CFLAGS}"
LDFLAGS="${LDFLAGS} ${EJDB_LIBS}"

CMOD_LIBS="$LDFLAGS"
CMOD_FLAGS="$CPPFLAGS"

AC_CHECK_HEADERS(tcejdb/ejdb.h)
# AC_CHECK_LIB(xml2, xmlCleanupParser) 
# AC_CHECK_FUNCS(xmlNewDocPI) 
AC_CHECK_FUNCS(ejdbcommand)

AC_SUBST(CMOD_CFLAGS) 
AC_SUBST(CMOD_LIBS)

AC_OUTPUT(Makefile)

